# solver-davidalejandrolazopampa

./: CMakeLists.txt  README.md  arbolcalculos.h  bstree.out  main.cpp
Calculos/: Cal.h  Divicion.h  Exponente.h  Multiplicacion.h  Numero.h  Parentesis.h  Resta.h  Suma.h  Variable.h
bstree.out.dSYM/Contents/Resources/DWARF/: bstree.out
